language/move-lang/tests/move_check/naming/friend_decl_unbound_module.exp
error: 

   ┌── tests/move_check/naming/friend_decl_unbound_module.move:3:5 ───
   │
 3 │     friend 0x42::Nonexistent;
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^ Unbound module '0x42::Nonexistent'
   │

